Holograms and Life Ride Update Added: - A completely new villager menu system using holograms (if you preferred the old chest GUI, you can disable the holograms) - Villagers can now ride camels and llamas - The configuration file has been split into parts - Option to disable recipes - Ability to disable gender and assign a custom gender to each player - Improved revive system: now a lightning bolt must strike within 2 blocks of the head for the ritual to begin in a more atmospheric way - Players can create a special chest/barrel for a villager by placing a sign with the text [Villager] on the chest. They can also assign items that the villager can take - A website for managing settings interactively - Regionality system: an extensive system that influences villagers based on the region where they live. For example, in the desert, you’ll encounter villagers with darker skin tones, Arabic names, and conversations typical of desert dwellers; or perhaps in the snowy biome, villagers dressed in warm robes with Nordic names, speaking with an accent and constantly complaining about the cold (These options can be disabled and fully customized to your liking)
Fixed
- Revive works on newer versions
- Anvil GUI works again
- Villagers picking up items
- Taking items out of and putting items into containers