@@ -14,6 +14,7 @@ import org.bukkit.scheduler.BukkitRunnable;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Collections;
+import java.util.List;
 
 public class BabyTask extends BukkitRunnable {
 
@@ -23,12 +24,10 @@ public class BabyTask extends BukkitRunnable {
     private final boolean isBoy;
 
     private int count = 0;
-    private boolean success = false;
 
     @SuppressWarnings("OptionalGetWithoutIsPresent")
     public BabyTask(@NotNull RealisticVillagers plugin, Villager villager, Player player) {
         this.plugin = plugin;
-        // No need to check if it's invalid, the main GUI can only be opened by valid villagers.
         this.villager = plugin.getConverter().getNPC(villager).get();
         this.player = player;
         this.isBoy = RandomUtils.nextBoolean();
@@ -37,43 +36,44 @@ public class BabyTask extends BukkitRunnable {
     @Override
     public void run() {
         if (++count == 10) {
-            openInventory(Config.BABY_TEXT.asStringTranslated());
+            openNamingGUI(Config.BABY_TEXT.asStringTranslated());
             cancel();
             return;
         }
-
         villager.jumpIfPossible();
         player.spawnParticle(Particle.HEART, villager.bukkit().getEyeLocation(), 3, 0.1d, 0.1d, 0.1d);
     }
 
-    private void openInventory(String text) {
+    private void openNamingGUI(final String inputHint) {
+        String title = Config.BABY_TITLE.asStringTranslated()
+                .replace("%sex%", isBoy ? Config.BOY.asString() : Config.GIRL.asString());
+
         new AnvilGUI.Builder()
-                .title(Config.BABY_TITLE.asStringTranslated().replace("%sex%", isBoy ? Config.BOY.asString() : Config.GIRL.asString()))
-                .text(text)
+                .plugin(plugin)
+                .title(title)
+                .text(inputHint)
                 .itemLeft(new ItemStack(Material.PAPER))
-                .onClick((slot, snapshot) -> {
-                    if (slot != AnvilGUI.Slot.OUTPUT) return Collections.emptyList();
-
-                    String result = snapshot.getText().trim();
-                    if (result.length() < 3
-                            || result.equals(text)) return RealisticVillagers.CLOSE_RESPONSE;
-
+                .onClick((slot, state) -> {
+                    if (slot != AnvilGUI.Slot.OUTPUT) {
+                        return Collections.singletonList(AnvilGUI.ResponseAction.replaceInputText(state.getText()));
+                    }
+                    String result = state.getText().trim();
+                    if (result.length() < 3 || result.equals(inputHint)) {
+                        return List.of(
+                                AnvilGUI.ResponseAction.close(),
+                                AnvilGUI.ResponseAction.run(() ->
+                                        plugin.getServer().getScheduler().runTask(plugin,
+                                                () -> openNamingGUI(Config.BABY_INVALID_NAME.asStringTranslated()))));
+                    }
                     long procreation = System.currentTimeMillis();
-                    player.getInventory().addItem(plugin.createBaby(isBoy, result, procreation, villager.bukkit().getUniqueId()));
-
+                    player.getInventory().addItem(
+                            plugin.createBaby(isBoy, result, procreation, villager.bukkit().getUniqueId()));
                     int reputation = Config.BABY_REPUTATION.asInt();
                     if (reputation > 1) villager.addMinorPositive(player.getUniqueId(), reputation);
                     villager.setProcreatingWith(null);
                     villager.setLastProcreation(procreation);
-
-                    success = true;
                     return RealisticVillagers.CLOSE_RESPONSE;
                 })
-                .onClose(opener -> {
-                    if (success) return;
-                    plugin.getServer().getScheduler().runTask(plugin, () -> openInventory(Config.BABY_INVALID_NAME.asStringTranslated()));
-                })
-                .plugin(plugin)
                 .open(player);
     }
 }
